--- a/README.textile
+++ b/README.textile
@@ -1,7 +1,16 @@
 h1. Scala wrapper for MongoDB
 
-mongo-scala-driver is a thin wrapper around "mongo-java-driver":http://www.mongodb.org/display/DOCS/Java+Language+Center to make working with "MongoDB":http://www.mongodb.org/ more Scala-like.
+mongo-scala-driver is a thin wrapper around
+"mongo-java-driver":http://www.mongodb.org/display/DOCS/Java+Language+Center to
+make working with "MongoDB":http://www.mongodb.org/ more Scala-like.
 
-bq. The first of all, this is a work in progress and implements only a subset of MongoDB features at the moment.
+bq. The first of all, this is a work in progress and implements only a subset of
+MongoDB features at the moment.
 
 *"Wiki":http://wiki.github.com/alaz/mongo-scala-driver*
+
+h2. Important changes
+
+h3. Version 0.7
+
+The major goal of 0.7 is to cover whole set of MongoDB's
