--- a/README.textile
+++ b/README.textile
@@ -9,6 +9,11 @@ bq. The first of all, this is a work in progress and implements only a subset of
 
 h2. Important changes
 
+h3. Version 0.7.5
+
+* mongo-java-driver 1.4
+* OSGi-fied
+
 h3. Version 0.7.4
 
 * mongo-java-driver 1.3 compatibility
