mongo-java-driver 2.0

--- a/README.textile
+++ b/README.textile
@@ -9,6 +9,10 @@ bq. The first of all, this is a work in progress and implements only a subset of
 
 h2. Important changes
 
+h3. Version 0.7.6
+
+* mongo-java-driver 2.0
+
 h3. Version 0.7.5
 
 * mongo-java-driver 1.4
