prepare for version 0.8.2

--- a/README.textile
+++ b/README.textile
@@ -9,6 +9,11 @@ bq. The first of all, this is a work in progress and implements only a subset of
 
 h2. Important changes
 
+h3. Version 0.8.2
+
+* "Issue 43":http://github.com/alaz/mongo-scala-driver/issues/closed#issue/43 fixed
+* Scala 2.8.0
+
 h3. Version 0.8.0
 
 * mongo-java-driver 1.4
