--- a/README.textile
+++ b/README.textile
@@ -9,6 +9,10 @@ bq. The first of all, this is a work in progress and implements only a subset of
 
 h2. Important changes
 
+h3. Version 0.8.6
+
+* Closes "issue 37":http://github.com/alaz/mongo-scala-driver/issues#issue/37 @$addToSet@ modifier.
+
 h3. Version 0.8.5
 
 * Bug fix: @unset@ operation must be available in any field.
